transport_versioned_docs/version-0.8.0/index.md


---
id: introduction
title: About Unity Transport
---
:::danger

This version of Unity Transport is neither supported nor suitable for production. Please refer to the documentation for Unity transport 1.0

:::

Unity Transport provides the `com.unity.transport` package, used to add multiplayer and network features to your project.

:::note
This package should not be confused with Unity MLAPI Transport. See [Custom Transports](/docs/advanced-topics/custom-transports) for more information.
:::

:::unity Content Licenses
All Transport code and documentation is covered by Unity Companion License. See [Licenses](/reference/license) for more information.
:::

## Overview

![Transport Overview](/img/transport/layercake.png)

## Installing Transport

See the [installation guide](install.md) to install the `com.unity.transport` package.

## Using Transport

To learn how to use the `com.unity.transport` package in your own project, review the client and server workflows, additional information, and sample code available in this guide.

##  Requirements

This version of `com.unity.transport` is compatible with the following versions of the Unity Editor:

* 2020.1.2 and later
* All platforms supported by Unity are supported by the transport
